--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tune": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} scripts/fine-tune.ts"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.2",
     "ai": "2.2.10",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
